fix: Fixed collapse flag

--- a/src/modules/70-pipeline/components/AbstractNode/Nodes/CreateNode/CreateNode.module.scss
+++ b/src/modules/70-pipeline/components/AbstractNode/Nodes/CreateNode/CreateNode.module.scss
@@ -26,6 +26,6 @@
 }
 
 .steps {
-  width: 90px;
-  height: 40px;
+  width: 90px !important ;
+  height: 40px !important;
 }
